--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
     "buildpacks": [{
     "url": "heroku/python"
   }],
-  "repository": "https://github.com/DAXXTEAM/DAXXCHATBOT",
+  "repository": "https://github.com/RudeXAbhay/Chatbot",
   "env": {
     "BOT_TOKEN": {
       "description": "A Bot token from @BotFather",
